Update: Add 'Seleksi Baris pada Data Frame dengan Query' tricks
- Add 'Seleksi baris dengan query()' points

--- a/Trik_Pandas_06.ipynb
+++ b/Trik_Pandas_06.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2e0fce79",
+   "id": "0a4166ea",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a7092b2",
+   "id": "a67281d0",
    "metadata": {},
    "source": [
     "# Title: Pandas 06"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "376b933c",
+   "id": "d39df07f",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24701f3",
+   "id": "d9182bc7",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f4f10db3",
+   "id": "cd5d5868",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23377617",
+   "id": "a979e0f5",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd02394a",
+   "id": "4c663a8e",
    "metadata": {},
    "source": [
     "- Mengadopsi iris dataset kedalam data frame *df*."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3437a11c",
+   "id": "2891a215",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd30030",
+   "id": "b5b1bcb5",
    "metadata": {},
    "source": [
     "#### Mengenal `groupby()` dan Fungsi Agregasi"
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db06fc5f",
+   "id": "8076f341",
    "metadata": {},
    "source": [
     "- Fungsi agregasi adalah fungsi yang dikenakan pada sekelompok data dan erat kaitannya dengan pengelompokkan data groupby.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd213ae3",
+   "id": "12924030",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b4bdfa4",
+   "id": "22c30b60",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2d2e737",
+   "id": "57e2daaa",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d44ed47",
+   "id": "225f99b7",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `agg()`"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59da731b",
+   "id": "58afb946",
    "metadata": {},
    "source": [
     "- Untuk melewatkan ke-3 fungsi agregasi sekaligus kita dapat menggunakan fungsi `agg()`, seperti kode dibawah ini."
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5b658e6",
+   "id": "0248e5a0",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12063a52",
+   "id": "20cc5d8d",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `describe()`"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ec9716",
+   "id": "868fb04c",
    "metadata": {},
    "source": [
     "- Fungsi `describe()` digunakan untuk menampilkan data statistik."
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "126e8c6d",
+   "id": "3ef70651",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61aa90ec",
+   "id": "7a7a4bc5",
    "metadata": {},
    "source": [
     "#### \n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f3f858",
+   "id": "10e5f207",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fbb17330",
+   "id": "88def8a5",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b8361c",
+   "id": "9d1167fb",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef5a23f4",
+   "id": "3e39310e",
    "metadata": {},
    "source": [
     "- Mengadopsi titanic dataset dan iris dataset kedalam dataframe *df*."
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "358e903f",
+   "id": "466b28da",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ecf52b3",
+   "id": "33d530fd",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487fdc4f",
+   "id": "f80e17fc",
    "metadata": {},
    "source": [
     "#### Memantau Penggunaan Memory Suatu Data Frame"
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1cebee",
+   "id": "2ea0d9f7",
    "metadata": {},
    "source": [
     "- Untuk membandingkan penggunaan kedua memory kita bisa menggunakan fungsi `info()` dan parameter nya diisikan value 'deep'."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6edff741",
+   "id": "c7538263",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "998f4cad",
+   "id": "37842045",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0740b3c4",
+   "id": "7ca13ebe",
    "metadata": {},
    "source": [
     "#### Memantau Penggunaan Memory untuk Setiap Kolom dari Suatu Data Frame"
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a162a7f",
+   "id": "1cd443e6",
    "metadata": {},
    "source": [
     "- Jika kita ingin memantau penggunaan memory tidak di tingkat dataframe, tetapi di tiap kolomnya kita bisa menggunakan fungsi `memory_usage()` dengan nilai deep = 'true'.\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e643be03",
+   "id": "c4637fd7",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5edc21d9",
+   "id": "c7f37820",
    "metadata": {},
    "outputs": [
     {
@@ -1147,6 +1147,289 @@
    ],
    "source": [
     "df_iris.memory_usage(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01d16a2d",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #23 Seleksi Baris pada Data Frame dengan Query\n",
+    "#### Source : https://youtu.be/1xP2gZsAzRw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a83fa0",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a46280e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce9f6a7",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a60d3e",
+   "metadata": {},
+   "source": [
+    "- Membuat dataframe menggunakan dictionaries.\n",
+    "- Label kolom pertama tidak menggunakan spasi. Sedangkan label kolom kedua menggunakan spasi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b9f3ff5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kolom_satu</th>\n",
+       "      <th>kolom dua</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   kolom_satu  kolom dua\n",
+       "0           1         10\n",
+       "1           2         20\n",
+       "2           3         30\n",
+       "3           4         40\n",
+       "4           5         50"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'kolom_satu':[1, 2, 3, 4, 5], \n",
+    "     'kolom dua':[10, 20, 30, 40, 50]}\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6979250",
+   "metadata": {},
+   "source": [
+    "#### Seleksi baris dengan `query()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03285a01",
+   "metadata": {},
+   "source": [
+    "- Query statement harus berbentuk string.\n",
+    "- Komponen utama yang membentuk query statement adalah nama kolom dan diikuti kondisinya.\n",
+    "- karena nama label kolom kedua memiliki spasi kita perlu menggunakan simbol backtick."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "531d10af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kolom_satu</th>\n",
+       "      <th>kolom dua</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   kolom_satu  kolom dua\n",
+       "2           3         30\n",
+       "3           4         40\n",
+       "4           5         50"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('kolom_satu > 2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "67e51805",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kolom_satu</th>\n",
+       "      <th>kolom dua</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   kolom_satu  kolom dua\n",
+       "3           4         40\n",
+       "4           5         50"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('`kolom dua` > 30')"
    ]
   }
  ],
