--- a/Trik_Pandas_06.ipynb
+++ b/Trik_Pandas_06.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0a4166ea",
+   "id": "5c994785",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a67281d0",
+   "id": "5858975b",
    "metadata": {},
    "source": [
     "# Title: Pandas 06"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d39df07f",
+   "id": "f7988a07",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9182bc7",
+   "id": "c2c1113d",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cd5d5868",
+   "id": "236ff546",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a979e0f5",
+   "id": "223065aa",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c663a8e",
+   "id": "3923699e",
    "metadata": {},
    "source": [
     "- Mengadopsi iris dataset kedalam data frame *df*."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2891a215",
+   "id": "d00c9a68",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b1bcb5",
+   "id": "d5255e21",
    "metadata": {},
    "source": [
     "#### Mengenal `groupby()` dan Fungsi Agregasi"
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8076f341",
+   "id": "d28d6613",
    "metadata": {},
    "source": [
     "- Fungsi agregasi adalah fungsi yang dikenakan pada sekelompok data dan erat kaitannya dengan pengelompokkan data groupby.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12924030",
+   "id": "5b0ba1bc",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22c30b60",
+   "id": "512fec74",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "57e2daaa",
+   "id": "c715c152",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "225f99b7",
+   "id": "24569447",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `agg()`"
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58afb946",
+   "id": "adea42ad",
    "metadata": {},
    "source": [
     "- Untuk melewatkan ke-3 fungsi agregasi sekaligus kita dapat menggunakan fungsi `agg()`, seperti kode dibawah ini."
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0248e5a0",
+   "id": "5158bf00",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20cc5d8d",
+   "id": "c959f914",
    "metadata": {},
    "source": [
     "#### Agregasi dengan `describe()`"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868fb04c",
+   "id": "69854762",
    "metadata": {},
    "source": [
     "- Fungsi `describe()` digunakan untuk menampilkan data statistik."
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3ef70651",
+   "id": "7e282121",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a7a4bc5",
+   "id": "42db6468",
    "metadata": {},
    "source": [
     "#### \n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e5f207",
+   "id": "ae508d06",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88def8a5",
+   "id": "450b0377",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1167fb",
+   "id": "767f19ad",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e39310e",
+   "id": "0dad37fe",
    "metadata": {},
    "source": [
     "- Mengadopsi titanic dataset dan iris dataset kedalam dataframe *df*."
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "466b28da",
+   "id": "d77186c9",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "33d530fd",
+   "id": "bd5d57fe",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80e17fc",
+   "id": "529cfb4d",
    "metadata": {},
    "source": [
     "#### Memantau Penggunaan Memory Suatu Data Frame"
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea0d9f7",
+   "id": "89d14dd9",
    "metadata": {},
    "source": [
     "- Untuk membandingkan penggunaan kedua memory kita bisa menggunakan fungsi `info()` dan parameter nya diisikan value 'deep'."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7538263",
+   "id": "c4bea8bc",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "37842045",
+   "id": "fa3ab745",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca13ebe",
+   "id": "5f0227b1",
    "metadata": {},
    "source": [
     "#### Memantau Penggunaan Memory untuk Setiap Kolom dari Suatu Data Frame"
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd443e6",
+   "id": "6309154a",
    "metadata": {},
    "source": [
     "- Jika kita ingin memantau penggunaan memory tidak di tingkat dataframe, tetapi di tiap kolomnya kita bisa menggunakan fungsi `memory_usage()` dengan nilai deep = 'true'.\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c4637fd7",
+   "id": "66767704",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c7f37820",
+   "id": "734438cb",
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01d16a2d",
+   "id": "571e218d",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a83fa0",
+   "id": "fd2b462f",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a46280e9",
+   "id": "727b2a1b",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce9f6a7",
+   "id": "4c017b85",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31a60d3e",
+   "id": "376403ab",
    "metadata": {},
    "source": [
     "- Membuat dataframe menggunakan dictionaries.\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9f3ff5a",
+   "id": "7c434bb2",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6979250",
+   "id": "b8e1d84c",
    "metadata": {},
    "source": [
     "#### Seleksi baris dengan `query()`"
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03285a01",
+   "id": "8222c6a5",
    "metadata": {},
    "source": [
     "- Query statement harus berbentuk string.\n",
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "531d10af",
+   "id": "73131cfc",
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "67e51805",
+   "id": "22154feb",
    "metadata": {},
    "outputs": [
     {
@@ -1430,6 +1430,190 @@
    ],
    "source": [
     "df.query('`kolom dua` > 30')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "706c02f5",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #24 UTC dan konversi zona waktu pada Python Pandas\n",
+    "#### Source : https://youtu.be/IhZmO8gk-cU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e12afc66",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6fb6e5a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdca50d9",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fbebfe9",
+   "metadata": {},
+   "source": [
+    "- Kali ini kita menggunakan pandas series.\n",
+    "- Range disini memiliki step 3600 seconds = 1 jam.\n",
+    "- Angka disini mengacu pada unix epoch time.\n",
+    "- Series disini akan diubah menjadi date time dengan menggunakan `to_datetime()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7868b6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2020-06-09 06:18:41\n",
+       "1   2020-06-09 07:18:41\n",
+       "2   2020-06-09 08:18:41\n",
+       "3   2020-06-09 09:18:41\n",
+       "4   2020-06-09 10:18:41\n",
+       "dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(range(1591683521, 1592201921, 3600))\n",
+    "s = pd.to_datetime(s, unit='s')\n",
+    "s.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d57d600",
+   "metadata": {},
+   "source": [
+    "#### Pengaturan zona waktu (time zone)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92171204",
+   "metadata": {},
+   "source": [
+    "- Standarisasi waktu menggunakan menggunakan `localize()`.\n",
+    "- Jika kita ingin melihat zona waktu yang baru kita bisa menggunakan `convert()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e7a1a041",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2020-06-09 06:18:41+00:00\n",
+       "1   2020-06-09 07:18:41+00:00\n",
+       "2   2020-06-09 08:18:41+00:00\n",
+       "3   2020-06-09 09:18:41+00:00\n",
+       "4   2020-06-09 10:18:41+00:00\n",
+       "dtype: datetime64[ns, UTC]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = s.dt.tz_localize('UTC')\n",
+    "s.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "389bcd9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2020-06-09 13:18:41+07:00\n",
+       "1   2020-06-09 14:18:41+07:00\n",
+       "2   2020-06-09 15:18:41+07:00\n",
+       "3   2020-06-09 16:18:41+07:00\n",
+       "4   2020-06-09 17:18:41+07:00\n",
+       "dtype: datetime64[ns, Asia/Jakarta]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = s.dt.tz_convert('Asia/Jakarta')\n",
+    "s.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "50a2d598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2020-06-09 16:18:41+10:00\n",
+       "1   2020-06-09 17:18:41+10:00\n",
+       "2   2020-06-09 18:18:41+10:00\n",
+       "3   2020-06-09 19:18:41+10:00\n",
+       "4   2020-06-09 20:18:41+10:00\n",
+       "dtype: datetime64[ns, Australia/Hobart]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = s.dt.tz_convert('Australia/Hobart')\n",
+    "s.head()"
    ]
   }
  ],
