Update: Add 'Membuat Data Frame dari Hasil Seleksi Spreadsheet' tricks
- Add 'Membuat Data Frame dari Hasil Seleksi Spreadsheet' points

--- a/Trik_Pandas_07.ipynb
+++ b/Trik_Pandas_07.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7fda3b5f",
+   "id": "c20e86c9",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ec5f09",
+   "id": "bb38ae07",
    "metadata": {},
    "source": [
     "# Title: Pandas 07"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27c53201",
+   "id": "99c7f8a9",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa4fd48",
+   "id": "5e79d094",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69297977",
+   "id": "01d5bd69",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45315c01",
+   "id": "6ef63f58",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871d09a5",
+   "id": "7dba9ab6",
    "metadata": {},
    "source": [
     "- Adopsi titanic dataset untuk dataframe kali ini."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "19592b2a",
+   "id": "bfc1a915",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3afc44b",
+   "id": "386732a7",
    "metadata": {},
    "source": [
     "#### Pengaturan tampilan"
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1752aa0",
+   "id": "f24be77b",
    "metadata": {},
    "source": [
     "- Untuk melakukan pengaturan kita dapat memanggil `pd.set_option()`."
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cc56a350",
+   "id": "a246df95",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8028cb01",
+   "id": "151166b9",
    "metadata": {},
    "source": [
     "- Untuk melakukan reset display kita bisa menggunakan fungsi `pd.reset_option()`."
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9918d2b0",
+   "id": "209dabdb",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed687de",
+   "id": "49c0c78c",
    "metadata": {},
    "source": [
     "- Untuk melihat daftar lengkap terkait option yang bisa di konfigurasi kita bisa memanggil fungsi `pd.describe_option()`."
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "280a65a5",
+   "id": "56ef4697",
    "metadata": {},
    "outputs": [
     {
@@ -987,6 +987,131 @@
    ],
    "source": [
     "pd.describe_option()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bb4b8de",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #26 Membuat Data Frame dari Hasil Seleksi Spreadsheet\n",
+    "#### Source : https://youtu.be/s8ErmUx_aLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d456fe4b",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0870e90a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fd46712",
+   "metadata": {},
+   "source": [
+    "#### Membuat Data Frame dari Hasil Seleksi Spreadsheet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89bc1f2d",
+   "metadata": {},
+   "source": [
+    "- Untuk membuat dataframe dari hasil seleksi spreadsheet/ excel, kita hanya perlu menaruh seleksi tadi kedalam clipboard.\n",
+    "- Caranya mudah yaitu dengan melakukan copy pada data yang telah diseleksi.\n",
+    "- Baris pertama dari hasil seleksi akan dijadikan nama kolom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d4c6f685",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NRP</th>\n",
+       "      <th>NAMA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2073001</td>\n",
+       "      <td>Albertus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2073002</td>\n",
+       "      <td>Alan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2073003</td>\n",
+       "      <td>Mehetabel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       NRP       NAMA\n",
+       "0  2073001   Albertus\n",
+       "1  2073002       Alan\n",
+       "2  2073003  Mehetabel"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_clipboard()\n",
+    "df"
    ]
   }
  ],
