--- a/Trik_Pandas_07.ipynb
+++ b/Trik_Pandas_07.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c20e86c9",
+   "id": "760589ae",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb38ae07",
+   "id": "4f4aa281",
    "metadata": {},
    "source": [
     "# Title: Pandas 07"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c7f8a9",
+   "id": "089c3d44",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e79d094",
+   "id": "7dc0d8e6",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01d5bd69",
+   "id": "98eedbe2",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef63f58",
+   "id": "b1c3fd65",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dba9ab6",
+   "id": "608afccc",
    "metadata": {},
    "source": [
     "- Adopsi titanic dataset untuk dataframe kali ini."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bfc1a915",
+   "id": "7d94074b",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386732a7",
+   "id": "2e9990b2",
    "metadata": {},
    "source": [
     "#### Pengaturan tampilan"
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24be77b",
+   "id": "1b931b1c",
    "metadata": {},
    "source": [
     "- Untuk melakukan pengaturan kita dapat memanggil `pd.set_option()`."
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a246df95",
+   "id": "a90262e0",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151166b9",
+   "id": "a7a37d45",
    "metadata": {},
    "source": [
     "- Untuk melakukan reset display kita bisa menggunakan fungsi `pd.reset_option()`."
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "209dabdb",
+   "id": "0490e503",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49c0c78c",
+   "id": "f2bf861a",
    "metadata": {},
    "source": [
     "- Untuk melihat daftar lengkap terkait option yang bisa di konfigurasi kita bisa memanggil fungsi `pd.describe_option()`."
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56ef4697",
+   "id": "76ec26d1",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb4b8de",
+   "id": "c5dbb273",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d456fe4b",
+   "id": "1be8da1e",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0870e90a",
+   "id": "6053d8c8",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fd46712",
+   "id": "fb2dcc9b",
    "metadata": {},
    "source": [
     "#### Membuat Data Frame dari Hasil Seleksi Spreadsheet"
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89bc1f2d",
+   "id": "68262f2c",
    "metadata": {},
    "source": [
     "- Untuk membuat dataframe dari hasil seleksi spreadsheet/ excel, kita hanya perlu menaruh seleksi tadi kedalam clipboard.\n",
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4c6f685",
+   "id": "084038dc",
    "metadata": {},
    "outputs": [
     {
@@ -1112,6 +1112,373 @@
    "source": [
     "df = pd.read_clipboard()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f406fc1",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #27 Fungsi Agregasi `First()` dan `Last()`\n",
+    "#### Source : https://youtu.be/OcNoXSbekNU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcf8c589",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a3372603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4178cd5b",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ba7ebd6",
+   "metadata": {},
+   "source": [
+    "- Dataframe kali ini berupa daftar antrian antara dokter dan pasien yang dibuat menggunakan dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7cb5d4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dokter</th>\n",
+       "      <th>pasien</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Budi</td>\n",
+       "      <td>Abdul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wati</td>\n",
+       "      <td>Rahmat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iwan</td>\n",
+       "      <td>Asep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budi</td>\n",
+       "      <td>Joko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Budi</td>\n",
+       "      <td>Wiwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Wati</td>\n",
+       "      <td>Lisa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  dokter  pasien\n",
+       "0   Budi   Abdul\n",
+       "1   Wati  Rahmat\n",
+       "2   Iwan    Asep\n",
+       "3   Budi    Joko\n",
+       "4   Budi   Wiwin\n",
+       "5   Wati    Lisa"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'dokter':['Budi', 'Wati', 'Iwan', 'Budi', 'Budi', 'Wati'], \n",
+    "     'pasien':['Abdul', 'Rahmat', 'Asep', 'Joko', 'Wiwin', 'Lisa']}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18dc02be",
+   "metadata": {},
+   "source": [
+    "#### Mengenal Fungsi Agregasi `First()` dan `Last()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a57f8cc",
+   "metadata": {},
+   "source": [
+    "- Pertama akan kita kelompokkan berdasarkan dokter (ada 3).\n",
+    "- Kemudian menghitung jumlah pasien untuk setiap dokter menggunakan fungsi agregasi `count()`.\n",
+    "- Kemudian menampilkan pasien pertama untuk setiap dokter menggunakan fungsi agregasi `first()`.\n",
+    "- Terakhir menampilkan pasien terakhir untuk setiap dokter menggunakan fungsi agregasi `last()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "39e0aac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pasien</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dokter</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Budi</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iwan</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wati</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pasien\n",
+       "dokter        \n",
+       "Budi         3\n",
+       "Iwan         1\n",
+       "Wati         2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('dokter')['pasien'].count().to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "87118a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pasien</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dokter</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Budi</th>\n",
+       "      <td>Abdul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iwan</th>\n",
+       "      <td>Asep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wati</th>\n",
+       "      <td>Rahmat</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pasien\n",
+       "dokter        \n",
+       "Budi     Abdul\n",
+       "Iwan      Asep\n",
+       "Wati    Rahmat"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('dokter')['pasien'].first().to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b6fa91de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pasien</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dokter</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Budi</th>\n",
+       "      <td>Wiwin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iwan</th>\n",
+       "      <td>Asep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wati</th>\n",
+       "      <td>Lisa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pasien\n",
+       "dokter       \n",
+       "Budi    Wiwin\n",
+       "Iwan     Asep\n",
+       "Wati     Lisa"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('dokter')['pasien'].last().to_frame()"
    ]
   }
  ],
