Finished 'Trik_Pandas_07.ipynb' with 4 tricks
- Add 'Mengenal explode dan implode List' tricks
    - Add 'Explode' points
    - Add 'Implode' points

--- a/Trik_Pandas_07.ipynb
+++ b/Trik_Pandas_07.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "760589ae",
+   "id": "fa785765",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4aa281",
+   "id": "4cb0b213",
    "metadata": {},
    "source": [
     "# Title: Pandas 07"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089c3d44",
+   "id": "ba661a8a",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc0d8e6",
+   "id": "458caf85",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98eedbe2",
+   "id": "639bce09",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1c3fd65",
+   "id": "e6647699",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608afccc",
+   "id": "1c34813f",
    "metadata": {},
    "source": [
     "- Adopsi titanic dataset untuk dataframe kali ini."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d94074b",
+   "id": "6714c072",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e9990b2",
+   "id": "abdb61b1",
    "metadata": {},
    "source": [
     "#### Pengaturan tampilan"
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b931b1c",
+   "id": "956a615f",
    "metadata": {},
    "source": [
     "- Untuk melakukan pengaturan kita dapat memanggil `pd.set_option()`."
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a90262e0",
+   "id": "42e56c96",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a37d45",
+   "id": "84df96dc",
    "metadata": {},
    "source": [
     "- Untuk melakukan reset display kita bisa menggunakan fungsi `pd.reset_option()`."
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0490e503",
+   "id": "cd99950a",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2bf861a",
+   "id": "bef98ca6",
    "metadata": {},
    "source": [
     "- Untuk melihat daftar lengkap terkait option yang bisa di konfigurasi kita bisa memanggil fungsi `pd.describe_option()`."
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76ec26d1",
+   "id": "1b45efc9",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5dbb273",
+   "id": "0d560086",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1be8da1e",
+   "id": "b07f341e",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6053d8c8",
+   "id": "901b80e4",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2dcc9b",
+   "id": "5ba28b16",
    "metadata": {},
    "source": [
     "#### Membuat Data Frame dari Hasil Seleksi Spreadsheet"
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68262f2c",
+   "id": "a2210e8c",
    "metadata": {},
    "source": [
     "- Untuk membuat dataframe dari hasil seleksi spreadsheet/ excel, kita hanya perlu menaruh seleksi tadi kedalam clipboard.\n",
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "084038dc",
+   "id": "b7e1afe7",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f406fc1",
+   "id": "c715a126",
    "metadata": {},
    "source": [
     "#### \n",
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf8c589",
+   "id": "6e40dc64",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a3372603",
+   "id": "03c87378",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4178cd5b",
+   "id": "e69736bf",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba7ebd6",
+   "id": "4381ff3e",
    "metadata": {},
    "source": [
     "- Dataframe kali ini berupa daftar antrian antara dokter dan pasien yang dibuat menggunakan dictionary."
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7cb5d4cf",
+   "id": "ed538499",
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18dc02be",
+   "id": "870052cc",
    "metadata": {},
    "source": [
     "#### Mengenal Fungsi Agregasi `First()` dan `Last()`"
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a57f8cc",
+   "id": "43b7090e",
    "metadata": {},
    "source": [
     "- Pertama akan kita kelompokkan berdasarkan dokter (ada 3).\n",
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "39e0aac2",
+   "id": "f6d5346d",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87118a03",
+   "id": "185117f9",
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b6fa91de",
+   "id": "580b1157",
    "metadata": {},
    "outputs": [
     {
@@ -1479,6 +1479,402 @@
    ],
    "source": [
     "df.groupby('dokter')['pasien'].last().to_frame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbb042f",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #28 Mengenal `explode` dan `implode` List\n",
+    "#### Source : https://youtu.be/rjIemakdp4M"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e49ee5d",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0ce80f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c4c9ec1",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27868072",
+   "metadata": {},
+   "source": [
+    "- Membuat dataframe superheroes yang terbagi dalam Tim DC dan Tim Marvel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "09f0e41b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Heroes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>[Batman, Superman, Wonder Woman, Aquaman, Gree...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>[Iron Man, Captain America, Ant-Man, Black Pan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Team                                             Heroes\n",
+       "0      DC  [Batman, Superman, Wonder Woman, Aquaman, Gree...\n",
+       "1  Marvel  [Iron Man, Captain America, Ant-Man, Black Pan..."
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'Team':['DC', 'Marvel'], \n",
+    "     'Heroes':[['Batman', 'Superman', 'Wonder Woman', 'Aquaman', 'Green Lantern', 'Shazam'], \n",
+    "               ['Iron Man', 'Captain America', 'Ant-Man', 'Black Panther', 'Captain Marvel']]}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffb0a6e",
+   "metadata": {},
+   "source": [
+    "#### Explode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b92fac4",
+   "metadata": {},
+   "source": [
+    "- Hasil explode ditampung kedalam variabel baru\n",
+    "- Kolom heroes kita explode sehingga memiliki baris terpisah"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c60108e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Heroes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Batman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Superman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Wonder Woman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Aquaman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Green Lantern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>Shazam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>Iron Man</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>Captain America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>Ant-Man</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>Black Panther</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>Captain Marvel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Team           Heroes\n",
+       "0      DC           Batman\n",
+       "0      DC         Superman\n",
+       "0      DC     Wonder Woman\n",
+       "0      DC          Aquaman\n",
+       "0      DC    Green Lantern\n",
+       "0      DC           Shazam\n",
+       "1  Marvel         Iron Man\n",
+       "1  Marvel  Captain America\n",
+       "1  Marvel          Ant-Man\n",
+       "1  Marvel    Black Panther\n",
+       "1  Marvel   Captain Marvel"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df.explode('Heroes')\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6f5587f",
+   "metadata": {},
+   "source": [
+    "#### Implode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f493b461",
+   "metadata": {},
+   "source": [
+    "- Implode adalah kebalikan dari explode, yaitu menyatukan kembali menjadi suatu list.\n",
+    "- Pertama kita buat dulu df2 dimana hanya berisi kolom Tim DC dan Tim Marvel.\n",
+    "- kemudian df1 kita kelompokkkan berdasarkan indexnya yaitu 0 dan 1.\n",
+    "- Kemudian kolom heroes kita agregasi menjadi suatu list.\n",
+    "- Terakhir masukkan kedalam df 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "48e3a941",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Team\n",
+       "0      DC\n",
+       "1  Marvel"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'Team':['DC', 'Marvel']}\n",
+    "df2 = pd.DataFrame(d)\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7f19fea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Imploded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>[Batman, Superman, Wonder Woman, Aquaman, Gree...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvel</td>\n",
+       "      <td>[Iron Man, Captain America, Ant-Man, Black Pan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Team                                           Imploded\n",
+       "0      DC  [Batman, Superman, Wonder Woman, Aquaman, Gree...\n",
+       "1  Marvel  [Iron Man, Captain America, Ant-Man, Black Pan..."
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['Imploded'] = df1.groupby(df1.index)['Heroes'].agg(list)\n",
+    "df2"
    ]
   }
  ],
