--- a/Trik_Pandas_08.ipynb
+++ b/Trik_Pandas_08.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a5553c05",
+   "id": "a1f05b87",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41196981",
+   "id": "adfa9470",
    "metadata": {},
    "source": [
     "# Title: Pandas 08"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536e557c",
+   "id": "e774bee1",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110afeb0",
+   "id": "b8eaf146",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bff95ac4",
+   "id": "880a059f",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1364a43f",
+   "id": "c240dd11",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "405e883d",
+   "id": "154e4388",
    "metadata": {},
    "source": [
     "- Membuat dataframe dengan dua buah kolom yang setiap kolom memiliki 5 *value*."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e3a6bc71",
+   "id": "c5ca57ef",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013e143c",
+   "id": "23b9d4bd",
    "metadata": {},
    "source": [
     "#### Random Sampling with/without Replacement"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0bd6d12",
+   "id": "87160a36",
    "metadata": {},
    "source": [
     "- Method `sample()` membutuhkan tiga buah parameter.\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff3c9f2a",
+   "id": "c09a8b92",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f497a0b",
+   "id": "1441dd73",
    "metadata": {},
    "outputs": [
     {
@@ -321,6 +321,356 @@
    ],
    "source": [
     "df.sample(n=4, replace=True, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "892033ef",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #29 Akses Nilai Variabel Dalam Fungsi Query\n",
+    "#### Source : https://youtu.be/5GnsXm8ANts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81bbc002",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b11a434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "621f7c28",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b43928",
+   "metadata": {},
+   "source": [
+    "- Buat dataframe dengan lima buah baris dan kolom.\n",
+    "- Nama setiap kolom berasal dari tuple('ABCDE').\n",
+    "- Isi setiap kolom berupa random integer dengan rentang 1 - 20."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3ac16469",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "0  10   8  13   9   1\n",
+       "1  10   6  17  10   8\n",
+       "2  13  10  18  14   5\n",
+       "3  11  18   5  18  16\n",
+       "4  12   2   4   7  10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 5\n",
+    "n_cols = 5\n",
+    "cols = tuple('ABCDE')\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1, 20, size=(n_rows, n_cols)), \n",
+    "                  columns=cols)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d155f475",
+   "metadata": {},
+   "source": [
+    "#### Akses Nilai Variabel pada `query()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe8864d",
+   "metadata": {},
+   "source": [
+    "- Method query digunakan untuk menyeleksi baris."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b822f4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "2  13  10  18  14   5\n",
+       "3  11  18   5  18  16\n",
+       "4  12   2   4   7  10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('A > 10') # menyeleksi baris pada kolom A yang memiliki nilai lebih dari 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c35d9d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rerata = df['A'].mean() # menghitung rata-rata dari kolom A\n",
+    "rerata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c2c9e856",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    A   B   C   D   E\n",
+       "2  13  10  18  14   5\n",
+       "4  12   2   4   7  10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('A > @rerata') # menampilkan baris nilai yang lebih besar dari rata-rata"
    ]
   }
  ],
